@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.554 2005/05/05 19:36:57 xtraeme Exp $
+# $NetBSD: Makefile,v 1.555 2005/05/07 19:29:50 jdolecek Exp $
 #
 
 COMMENT=	Networking tools
@@ -279,6 +279,7 @@ SUBDIR+=	php-ftp
 SUBDIR+=	php-snmp
 SUBDIR+=	php-sockets
 SUBDIR+=	php-yp
+SUBDIR+=	php5-soap
 SUBDIR+=	pim6dd
 SUBDIR+=	pim6sd
 SUBDIR+=	pload
