@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10046 2005/05/07 18:59:05 jdolecek Exp $
+$NetBSD: CHANGES,v 1.10047 2005/05/07 19:29:50 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -2317,3 +2317,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Removed milter-spamc [wiz 2005-05-07]
 	Updated pear-SOAP to 0.8.1 [jdolecek 2005-05-07]
 	Added php-eaccelerator-0.9.2a [jdolecek 2005-05-07]
+	Added php-soap-5.0.4 [jdolecek 2005-05-07]
